<resources>
    <string name="app_name">My Application</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_an_one_time_password_on_this_mobile_number">We will send an One Time Password on this mobile number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_84">+84</string>
    <string name="_123456789">123456789</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_the_otp_send_to">Enter the OTP send to</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP ?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">Verify</string>
</resources>