<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:overScrollMode="never"
    android:scrollbars="none"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SendOTPActivity">
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/send_otp"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="@dimen/_80sdp"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"/>
        <TextView
            android:textStyle="bold"
            android:textSize="@dimen/_20sdp"
            android:text="@string/otp_verification"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/secondaryText"
            android:text="@string/we_will_send_an_one_time_password_on_this_mobile_number"
            android:gravity="center"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/enter_mobile_number"
            android:textSize="14sp"
            android:textColor="@color/primaryText"
            android:gravity="center"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginEnd="@dimen/_60sdp"
            android:layout_marginStart="@dimen/_60sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/primaryText"
                android:text="@string/_84"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>
            <EditText
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                android:textSize="16sp"
                android:textColor="@color/primaryText"
                android:inputType="number"
                android:importantForAutofill="no"
                android:imeOptions="actionDone"
                android:hint="@string/_123456789"
                android:background="@null"
                android:id="@+id/inputMobile"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

        </LinearLayout>
        <View
            android:background="@color/divider"
            android:layout_marginEnd="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_70sdp"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"/>

            <Button
                android:id="@+id/buttonGetOTP"
                android:background="@drawable/background_button"
                android:textColor="@color/white"
                android:text="@string/get_otp"
                android:layout_margin="@dimen/_30sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </FrameLayout>


    </LinearLayout>

</ScrollView>