<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:overScrollMode="never"
    android:scrollbars="none"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.VerityOTPActivity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/icons8_received_64"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="@dimen/_80sdp"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"/>
        <TextView
            android:textStyle="bold"
            android:textSize="@dimen/_20sdp"
            android:text="@string/otp_verification"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/secondaryText"
            android:text="@string/enter_the_otp_send_to"
            android:gravity="center"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/textMobile"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:gravity="center"
            android:textColor="@color/primaryText"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/inputCode1"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/primaryText"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_width="40dp"
                android:layout_height="45dp"/>
            <EditText
                android:id="@+id/inputCode2"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/primaryText"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_width="40dp"
                android:layout_height="45dp"/>
            <EditText
                android:id="@+id/inputCode3"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/primaryText"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_width="40dp"
                android:layout_height="45dp"/>
            <EditText
                android:id="@+id/inputCode4"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/primaryText"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_width="40dp"
                android:layout_height="45dp"/>
            <EditText
                android:id="@+id/inputCode5"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/primaryText"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_width="40dp"
                android:layout_height="45dp"/>
            <EditText
                android:id="@+id/inputCode6"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/primaryText"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_width="40dp"
                android:layout_height="45dp"/>

        </LinearLayout>
        <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="14sp"
            android:textColor="@color/secondaryText"
            android:text="@string/didn_t_receive_the_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/textResendOTP"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:text="@string/resend_otp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:layout_gravity="center"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"/>
        <Button
            android:id="@+id/buttonverify"
            android:background="@drawable/background_button"
            android:textColor="@color/white"
            android:text="@string/verify"
            android:layout_margin="@dimen/_30sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        </FrameLayout>
    </LinearLayout>

</ScrollView>